# G6080

./: .gitignore  README.md
common/: methods.py  setup.sh
final/report/: final_vgenty.tex
final/report/figures/: 140.eps  RT_V1500_E=1p25V_sigma.eps  RT_V1500_sigma0p05.eps  t0.eps  (+17 more)
final/src/: Makefile  decay.py  evolve.cpp  includes.h  j.py  juck.C  methods.h  play.py  plotter.py  ref.py  resonance.py  sigmas.py  unitarity.py
ps1/: Makefile  Plotter.cxx  Plotter.h  Recursion.cxx  Recursion.h  cosine_recursion_trunc.m  one.cxx
ps1/examples/: cosine_recursion_trunc.m  real_time_clock.c  real_time_modified.c
ps1/problem1/: 1a  Makefile  Plotter.cxx  Plotter.h  Recursion.cxx  Recursion.h  looks.h  one.cxx  oneC.cxx
ps1/problem2/: GNUmakefile  last_minute.py  looks.py  methods.py  real_time_modified.c  two.py  unnamed.eps
ps1/problem3/: Bessel.cxx  Bessel.h  GNUmakefile  LinkDef.h  looks.py  three.cxx  use.py
ps1/report/: GNUmakefile  problemset1_vgenty.tex
ps2/largon/: CMakeLists.txt  develop.cxx
ps2/largon/include/: LArgon.h  LinkDef.h
ps2/largon/mac/: develop.py  doug_ana.py  jackknife.py  reader.py
ps2/largon/modules/: FindROOT.cmake
ps2/largon/src/: LArgon.cxx
ps2/planets/: evolve.py  planet.py
ps2/report/: GNUmakefile  problemset2_vgenty.tex
ps3/largonana/: doug_ana.py
ps3/mock_data/: CMakeLists.txt  aye.cxx
ps3/report/: problemset3_vgenty.tex
ps4/ising/: Makefile  answer.py  bob_viewer.py  cluster.C  mag_viewer.py  playboy.py  random.C  spin_correlator.py  spin_viewer.py
ps4/one/: README.txt
ps4/report/: problemset4_vgenty.tex
ps4/two/: cluster.C
ps5/region/: Makefile  begin.sh  data0.txt  data1.txt  extrapolate.py  lanczos.cpp  plotter.py  poisson.cpp  poissonONE.cpp  poissonPLAY.cpp  schrodingerPLAY.cpp  surfer.py
ps5/report/: problemset5_vgenty.tex
(+118 files in other folders)
